--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "express-favicon": "^2.0.1",
     "mongodb": "^3.6.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
