--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
@@ -11,7 +12,6 @@
     "react": "^17.0.1",
     "react-axios": "^2.0.3",
     "react-dom": "^17.0.1",
-    "react-dropdown": "^1.9.0",
     "react-images-upload": "^1.2.8",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
