--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
+    "framer-motion": "^2.9.4",
     "react": "^17.0.1",
     "react-axios": "^2.0.3",
     "react-dom": "^17.0.1",
