--- a/package.json
+++ b/package.json
@@ -45,6 +45,11 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.12.5",
-    "framer-motion": "^2.9.4"
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.5",
+    "framer-motion": "^2.9.4",
+    "prettier": "^2.2.1"
   }
 }
